--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['/home/consultaPedidos']">Pedidos</a>
-            <a class="dropdown-item" href="#">Entregas</a>
+            <a class="dropdown-item" [routerLink]="['/home/consultaEntregas']">Entregas</a>
             <a class="dropdown-item" href="#">Fechamento</a>
           </div>
         </li>
