--- a/src/app/home/consultas/consulta-entregas/consulta-entregas.component.html
+++ b/src/app/home/consultas/consulta-entregas/consulta-entregas.component.html
@@ -1,1 +1,155 @@
-<p>consulta-entregas works!</p>
+<div style='text-align:center' id='titulo'><b>Consulta de Entregas</b></div><br>
+<div class='container'>
+ <br>   
+ 
+<div id='divFormConsulta' >
+    <button class="btn btn-outline-primary" id="buttonExpandeFormConsulta" style='margin:10px' (click)='expandeFormConsulta()'>{{labelButtonForm}}</button> 
+    <div id='formConsulta'>
+        <div class="row">
+            <div class="col-md-6"> 
+                <input type='number' class='form-control'  id="entregaId" (keyup.enter)="consultaPorEntregaId()" ngbTooltip="Digite o número da entrega e tecle enter" placeholder="Por número de entrega" style='width:300px;margin:10px'>
+                <div style='color:green;font-size:14px;text-align: center;' id='divMgsEntregaId'>{{mgsEntregaId}}</div>   
+             </div>
+             <div class="col-md-6">
+                <select class='form-control' id="clinicaId"  ngbTooltip="Escolha a clínica, mes e ano e clique em Consultar" style='width:300px;margin:10px'>
+                    <option value='' disabled>Por clínica</option>
+                    <option value='todos'>Todas as clínicas
+                    <option *ngFor='let clinica of clinicas' [value]='clinica.id'>{{clinica.nomeSimp}}
+                </select>  
+                <input type="month" class='form-control' id="anoMes" style='width:300px;margin:10px' id='anoMes' [value]='anoMes'> 
+                <button class="btn btn-info btn-sm" style='margin:10px;' (click)="consultaPorClinica()">Consultar</button>  
+                <div style='color:green;font-size:14px;text-align: center;' id='divMsgClinica'>{{msgClinica}}</div> 
+            </div>
+        </div>
+        
+        
+</div> 
+</div>
+
+
+<div id='tabelaEntregas' style='display:none;margin-top:70px'>
+    <table class='table table-hover' style='text-align: center;'>
+       <thead> 
+        <tr>
+        <th width="12%" colspan='3' >Id</th>
+
+        <th width='5%'>Emissão</th>
+        <th width='20%'>Clínica</th>
+        <th width='25%'>Pedidos</th>
+        <th width='10%'>Valor Total</th>
+        <th width='15%'>Dt. Entrega</th>
+        <th >Recebedor</th>
+       </tr>
+    </thead> 
+    <tbody>
+       <tr *ngFor="let entrega of entregas">
+        <th width="5%">{{entrega.id}}</th>
+        <td width="5%"><i class="material-icons" style="cursor:pointer" (click)="abreModalEntrega(entrega.id)" title='Nota de entrega nº {{entrega.id}}'> assignment</i></td>
+         <td width='2%'>  <div class="msgDetalheEntrega" id="msgDetalheEntrega_{{entrega.id}}">Aguarde um momento</div></td>
+        <td>{{entrega.dataEmissao | date:'dd/MM/yyyy'}}</td>
+        <td>{{entrega.clinica.nomeSimp}}</td>
+        <td>
+              <table class='table table-sm table-bordered' style='font-size:12px' width="90%">
+                  <tr *ngFor="let pedido of entrega.pedidos" height='20'>
+                     <td width='20%'>{{pedido.id}}</td>
+                     <td width='50%'>{{pedido.nomePaciente}}</td>
+                     <td style='text-align:right'> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>        
+                  </tr>    
+              </table>      
+        </td>
+        <td style='text-align: right;'>{{entrega.totalEntrega | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
+        <td style='text-align:center'> {{entrega.dataEntrega | date:'dd/MM/yyyy'}}</td>     
+             
+        <td>{{entrega.recebedor}}</td>
+    </tr>
+     </tbody> 
+
+   </table>     
+
+</div>
+
+
+
+
+
+<div style='padding:15px; text-align: center; border:1px solid #000;width:630px;display:none;' id='caixaNotaEntrega'>
+    <table style='width: 600px !important;margin: auto;'>
+        <tr>
+            <td width='90px'><img src="http://www.detalheprotetico.com.br/img/logo_detalhe_web.png" width='80px'/></td>
+            <td style='text-align:center;font-family: Arial, Helvetica, sans-serif;font-size:14px;color:#000099'><b>NOTA DE ENTREGA nº {{entregaSelecionada.id}} <br/>({{clinica.nomeSimp}})</b></td>
+        </tr>        
+    </table>
+    
+    
+    <br>
+    <div *ngFor="let pedido of entregaSelecionada.pedidos">
+        <table style='width: 600px !important;margin: auto; font-family: Arial, Helvetica, sans-serif;font-size:12px; text-align:left;'>
+            <tr height="20">
+                <td style='text-align: center;' colspan='4'><b>PEDIDO nº {{pedido.id}}</b></td>
+            </tr>   
+            <tr height="20">
+                <td width='100'><b>Data Pedido</b></td>    
+                <td>{{pedido.dataPedido | date:'dd/MM/yyyy'}}</td>    
+            </tr>
+                   
+            <tr height="20">
+                <td ><b>Dentista</b></td>    
+                <td >{{pedido.dentista}}</td>    
+            </tr>
+            <tr height="20">
+                <td ><b>Paciente</b></td>    
+                <td >{{pedido.nomePaciente}}</td>    
+            </tr>
+        </table>
+        <table style='width: 600px !important;margin: auto;font-family: Arial, Helvetica, sans-serif;border-collapse: collapse;border:1px solid #ccc; font-size:12px;padding:5px;text-align:left; ' >
+            <tr height="30" style='border-bottom:1px solid #ccc;text-align:center;'>
+                <td width="10%"></td>
+                <td width="40%" style='text-align: center;'><b>Derscrição</b></td>
+                <td width="20%" style='text-align: center;'><b>Valor Unitário</b></td>
+                <td width="10%" style='text-align: center;'><b>Qde</b></td>
+                <td width="20%" style='text-align: center;'><b>Total</b></td>
+             </tr>
+             <tr height="20" *ngFor="let item of pedido.itens; let i= index; " style='border-bottom:1px solid #ccc;'>
+                <td style='text-align: center;'>{{i + 1}}</td>
+                <td>{{item.descricao}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorUnitario | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
+                <td style='text-align: center;'>{{item.qde}}</td>
+                <td style='text-align: right;padding-right:5px'> {{item.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
+             </tr> 
+             <tr height="20" style='border-bottom:1px solid #ccc;'>
+                <td  colspan='4'><b>Valor Total</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
+                
+            <tr>
+            <tr height="20" *ngIf="pedido.desconto > 0" style='border-bottom:1px solid #ccc;'>
+                <td colspan='4'><b>Desconto ({{pedido.desconto}} %)</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorTotal - pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt' }}</b></td>
+                   
+            </tr> 
+            <tr height="20" *ngIf="pedido.desconto > 0">
+                <td colspan='4'><b>Valor Total Líquido</b></td>
+                <td style='text-align: right;padding-right:5px'><b> {{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</b></td>
+                    
+            </tr>      
+        </table>
+              <br>
+    </div>    
+    <br>
+    <br>
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Observações:</b> {{entregaSelecionada.obs }}</div>
+
+
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Valor total da entrega:</b> {{totalEntregaSelecionada | currency:'BRL':'symbol':'0.2-2':'pt' }}</div>
+    <div *ngIf="!entregaSelecionada.recebedor">
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> ___/___/________</div>
+
+    <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Nome legível:</b>___________________________________________</div>
+    </div>
+
+    <div *ngIf="entregaSelecionada.recebedor">
+        <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;margin-bottom:20px'><b>Data da entrega:</b> {{entregaSelecionada.dataEntrega | date:'dd/MM/yyyy' }}</div>
+    
+        <div style='text-align: left; font-size:14px;font-family: Arial;width:600px !important;margin: auto;'><b>Recebedor:</b> {{entregaSelecionada.recebedor}}</div>
+        </div>
+
+    </div>
