--- a/src/app/home/consultas/consulta-pedidos/consulta-pedidos.component.css
+++ b/src/app/home/consultas/consulta-pedidos/consulta-pedidos.component.css
@@ -10,6 +10,16 @@
 
 }
 
+.msgDetalhePedido{
+    background-color:lightsteelblue;
+    border: 1px solid #bbaeae; 
+    border-radius: 5px; 
+    position:absolute;
+    padding:10px;
+    box-shadow: 10px 10px 10px -6px rgba(0,0,0,0.75);
+    display:none;
+    }    
+
 #formConsulta{
     display: none;
 }
