--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['/home/consultaPedidos']">Pedidos</a>
             <a class="dropdown-item" [routerLink]="['/home/consultaEntregas']">Entregas</a>
-            <a class="dropdown-item" href="#">Fechamento</a>
+            <a class="dropdown-item" [routerLink]="['/home/consultaFechamentos']">Fechamentos</a>
           </div>
         </li>
 
@@ -37,7 +37,7 @@
             <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir Pedido </a>
             <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Pedidos Abertos</a>
             <a class="dropdown-item" [routerLink]="['/home/entregas']">Entregas</a>
-            <a class="dropdown-item" [routerLink]="['/home/fechamentos']">Fechamento</a>
+            <a class="dropdown-item" [routerLink]="['/home/fechamentos']">Fechamentos</a>
             <a class="dropdown-item" [routerLink]="['/home/statusPedidos']">Status Consolidado</a>
           </div>
         </li>
