Consulta de Fechamentos

--- a/src/app/home/consultas/consulta-fechamentos/consulta-fechamentos.component.css
+++ b/src/app/home/consultas/consulta-fechamentos/consulta-fechamentos.component.css
@@ -7,7 +7,7 @@
     position: absolute;
     }
 
-.msgDetalheEntrega{
+.msgDetalhe{
         background-color:lightsteelblue;
         border: 1px solid #bbaeae; 
         border-radius: 5px; 
