--- a/src/app/home/status-pedidos/status-pedidos.component.html
+++ b/src/app/home/status-pedidos/status-pedidos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <br>
     <br>
-    <div class="alert alert-info" id='divAguardarDados'>Aguarde enquanto os dados estão sendo carregados</div> 
+    <div class="alert alert-info" id='divAguardar'>Aguarde enquanto os dados estão sendo carregados</div> 
 <br>
 <br>
 
