--- a/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
+++ b/src/app/home/pedidos-em-processo/pedidos-em-processo.component.html
@@ -148,7 +148,7 @@
 <br>
 <div style='text-align:center' id='titulo'><b>Pedidos</b></div><br>
 <div class="container">
-<div class="alert alert-info" id='divAguardarDados'>Aguarde enquanto os dados estão sendo carregados</div>
+<div class="alert alert-info" id='divAguardar'>Aguarde enquanto os dados estão sendo carregados</div>
 <div id='dadosCarregados'>
     <table class='table table-dark' style='text-align: center;'>
         <tr>
@@ -167,8 +167,9 @@
     
      
      <table class='table table-hover'>
+       <tbody>
         <tr *ngFor="let pedido of pedidos">
-        <td width='5%' *ngIf="clinica.nomeSimp == pedido.clinica" style='text-align: center;cursor:pointer' >{{pedido.id}}</td>
+        <th width='5%' *ngIf="clinica.nomeSimp == pedido.clinica" style='text-align: center;cursor:pointer' >{{pedido.id}}</th>
         <td width='5%' *ngIf="clinica.nomeSimp == pedido.clinica" style='text-align: center;cursor:pointer' title='Detalhes do pedido nº {{pedido.id}}' (click)="abreModalPedido(content, pedido.id)" ><i class="material-icons">assignment </i></td>
         <td *ngIf="clinica.nomeSimp == pedido.clinica" width='20%'>{{pedido.nomePaciente}}</td>
         <td *ngIf="clinica.nomeSimp == pedido.clinica"  width='30%'>{{pedido.dentista}}</td>
@@ -176,7 +177,7 @@
         <td *ngIf="clinica.nomeSimp == pedido.clinica" width='15%' style='text-align: right;'>{{pedido.valorLiquido | currency:'BRL':'symbol':'0.2-2':'pt'}}</td>
         <td *ngIf="clinica.nomeSimp == pedido.clinica" width='10%' style='text-align: center;'><input type='checkbox' id='checkEntrega_{{pedido.id}}' (click)="checkEntrega(clinica.id, pedido.id)"></td>  
         </tr> 
-           
+       </tbody>    
      </table>
      <div style='display:none;text-align:right' id="botaoRegistrarEntrega_{{clinica.id}}" ><button  class='btn btn-info btn-sm' (click)="conferirEntrega(clinica.id, conferenciaEntrega)">Registrar Entrega</button></div>
      
