--- a/src/app/home/consultas/consulta-pedidos/consulta-pedidos.component.css
+++ b/src/app/home/consultas/consulta-pedidos/consulta-pedidos.component.css
@@ -1,25 +1,20 @@
-
-#divFormConsulta{
-    background-color: #f5f5f5;
-    border: 1px solid #bbaeae; 
-    border-radius: 5px; 
-    height:55px;
-    width:110px;
-    position: absolute;
-    
-
+#divFormConsulta {
+  background-color: #f5f5f5;
+  border: 1px solid #bbaeae;
+  border-radius: 5px;
+  height: 55x;
+  width: 900px !important;
+  margin: auto;
 }
 
-.msgDetalhePedido{
-    background-color:lightsteelblue;
-    border: 1px solid #bbaeae; 
-    border-radius: 5px; 
-    position:absolute;
-    padding:10px;
-    box-shadow: 10px 10px 10px -6px rgba(0,0,0,0.75);
-    display:none;
-    }    
-
-#formConsulta{
-    display: none;
+.msgDetalhePedido {
+  background-color: lightsteelblue;
+  border: 1px solid #bbaeae;
+  border-radius: 5px;
+  position: absolute;
+  padding: 10px;
+  box-shadow: 10px 10px 10px -6px rgba(0, 0, 0, 0.75);
+  display: none;
 }
+
+
