Sort na consulta de entregas e fechamentos

--- a/src/app/home/consultas/consulta-entregas/consulta-entregas.component.html
+++ b/src/app/home/consultas/consulta-entregas/consulta-entregas.component.html
@@ -6,7 +6,7 @@
     <!--
     <button class="btn btn-outline-primary" id="buttonExpandeFormConsulta" style='margin:10px' (click)='expandeFormConsulta()'>{{labelButtonForm}}</button> 
     -->
-   
+
     <div id="formConsulta">
       <table style="width:680px!important;margin:auto;">
         <tr>
@@ -78,72 +78,114 @@
   </div>
 
   <div>
-  <div id="tabelaEntregas" style="display:none;margin-top:10px">
-    <table class="table table-hover" style="text-align: center;">
-      <thead>
-        <tr>
-          <th width="12%" colspan="3">Id</th>
+    <div id="tabelaEntregas" style="display:none;margin-top:10px">
+      <table class="table table-hover" style="text-align: center;">
+        <thead>
+          <tr>
+            <th width="12%" colspan="3">Id</th>
 
-          <th width="5%">Emissão</th>
-          <th width="20%">Clínica</th>
-          <th width="25%">Pedidos</th>
-          <th width="10%">Valor Total</th>
-          <th width="15%">Dt. Entrega</th>
-          <th>Recebedor</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let entrega of entregas">
-          <th width="5%">{{ entrega.id }}</th>
-          <td width="5%">
-            <i
-              class="material-icons"
-              style="cursor:pointer"
-              (click)="abreModalEntrega(entrega.id)"
-              title="Nota de entrega nº {{ entrega.id }}"
+            <th
+              width="5%"
+              scope="col"
+              sortable="dataEmissao"
+              (sort)="onSort($event)"
+              style="text-align: center;cursor:pointer;"
             >
-              assignment</i
+              Emissão
+            </th>
+            <th
+              width="20%"
+              scope="col"
+              sortable="clinica.nomeSimp"
+              (sort)="onSort($event)"
+              style="text-align: center;cursor:pointer;"
             >
-          </td>
-          <td width="2%">
-            <div
-              class="msgDetalheEntrega"
-              id="msgDetalheEntrega_{{ entrega.id }}"
+              Clínica
+            </th>
+            <th width="25%">
+              Pedidos
+            </th>
+            <th
+              width="10%"
+              scope="col"
+              sortable="totalEntrega"
+              (sort)="onSort($event)"
+              style="text-align: right;cursor:pointer;"
             >
-              Aguarde um momento
-            </div>
-          </td>
-          <td>{{ entrega.dataEmissao | date: "dd/MM/yyyy" }}</td>
-          <td>{{ entrega.clinica.nomeSimp }}</td>
-          <td>
-            <table
-              class="table table-sm table-bordered"
-              style="font-size:12px"
-              width="90%"
+              Valor Total
+            </th>
+            <th
+              width="15%"
+              scope="col"
+              sortable="dataEntrega"
+              (sort)="onSort($event)"
+              style="text-align: right;cursor:pointer;"
             >
-              <tr *ngFor="let pedido of entrega.pedidos" height="20">
-                <td width="20%">{{ pedido.id }}</td>
-                <td width="50%">{{ pedido.nomePaciente }}</td>
-                <td style="text-align:right">
-                  {{
-                    pedido.valorLiquido | currency: "BRL":"symbol":"0.2-2":"pt"
-                  }}
-                </td>
-              </tr>
-            </table>
-          </td>
-          <td style="text-align: right;">
-            {{ entrega.totalEntrega | currency: "BRL":"symbol":"0.2-2":"pt" }}
-          </td>
-          <td style="text-align:center">
-            {{ entrega.dataEntrega | date: "dd/MM/yyyy" }}
-          </td>
+              Dt. Entrega
+            </th>
+            <th
+              scope="col"
+              sortable="recebedor"
+              (sort)="onSort($event)"
+              style="text-align: center;cursor:pointer;"
+            >
+              Recebedor
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let entrega of entregas">
+            <th width="5%">{{ entrega.id }}</th>
+            <td width="5%">
+              <i
+                class="material-icons"
+                style="cursor:pointer"
+                (click)="abreModalEntrega(entrega.id)"
+                title="Nota de entrega nº {{ entrega.id }}"
+              >
+                assignment</i
+              >
+            </td>
+            <td width="2%">
+              <div
+                class="msgDetalheEntrega"
+                id="msgDetalheEntrega_{{ entrega.id }}"
+              >
+                Aguarde um momento
+              </div>
+            </td>
+            <td>{{ entrega.dataEmissao | date: "dd/MM/yyyy" }}</td>
+            <td>{{ entrega.clinica.nomeSimp }}</td>
+            <td>
+              <table
+                class="table table-sm table-bordered"
+                style="font-size:12px"
+                width="90%"
+              >
+                <tr *ngFor="let pedido of entrega.pedidos" height="20">
+                  <td width="20%">{{ pedido.id }}</td>
+                  <td width="50%">{{ pedido.nomePaciente }}</td>
+                  <td style="text-align:right">
+                    {{
+                      pedido.valorLiquido
+                        | currency: "BRL":"symbol":"0.2-2":"pt"
+                    }}
+                  </td>
+                </tr>
+              </table>
+            </td>
+            <td style="text-align: right;">
+              {{ entrega.totalEntrega | currency: "BRL":"symbol":"0.2-2":"pt" }}
+            </td>
+            <td style="text-align:center">
+              {{ entrega.dataEntrega | date: "dd/MM/yyyy" }}
+            </td>
 
-          <td>{{ entrega.recebedor }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+            <td>{{ entrega.recebedor }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 
   <div id="caixaNotaEntrega" style="display:none;">
